--- a/DesafioFirebase/app/src/main/res/layout/fragment_register.xml
+++ b/DesafioFirebase/app/src/main/res/layout/fragment_register.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/background_image"
-    tools:context=".login.view.LoginFragment">
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:background="@drawable/background_image"
+tools:context=".register.view.RegisterFragment">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card"
@@ -29,6 +29,21 @@
                 android:id="@+id/textField"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:hint="@string/name"
+                app:boxBackgroundColor="@color/color_white">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/textField1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dm_16dp"
                 android:hint="@string/email"
                 app:boxBackgroundColor="@color/color_white">
 
@@ -40,13 +55,12 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textField2"
+                android:id="@+id/textField3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dm_16dp"
                 android:hint="@string/password"
-                app:boxBackgroundColor="@color/color_white"
-                app:endIconMode="password_toggle">
+                app:boxBackgroundColor="@color/color_white">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -55,32 +69,29 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <CheckBox
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/textField4"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/dm_8dp"
-                android:text="@string/remember"/>
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dm_16dp"
+                android:hint="@string/repeat_password"
+                app:boxBackgroundColor="@color/color_white">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword" />
+
+            </com.google.android.material.textfield.TextInputLayout>
 
             <Button
-                android:id="@+id/btnLogin"
+                android:id="@+id/textButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dm_24dp"
                 android:text="@string/log_in"
                 android:textColor="@color/color_white"
                 app:backgroundTint="@color/colorAccent"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
-                />
-
-            <Button
-                android:id="@+id/btnCreateAccount"
-                android:layout_width="wrap_content"
-                android:layout_height="35dp"
-                android:layout_marginTop="@dimen/dm_8dp"
-                android:layout_gravity="center"
-                android:text="@string/create_account"
-                android:textSize="@dimen/dm_12sp"
-                android:textColor="@color/colorTextLink"
                 style="@style/Widget.MaterialComponents.Button.TextButton"
                 />
 
