--- a/DesafioFirebase/app/src/main/res/navigation/nav_graph.xml
+++ b/DesafioFirebase/app/src/main/res/navigation/nav_graph.xml
@@ -18,5 +18,14 @@
         android:id="@+id/loginFragment"
         android:name="br.com.emanuel.desafiofirebase.login.view.LoginFragment"
         android:label="fragment_login"
-        tools:layout="@layout/fragment_login" />
+        tools:layout="@layout/fragment_login" >
+        <action
+            android:id="@+id/action_loginFragment_to_registerFragment"
+            app:destination="@id/registerFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/registerFragment"
+        android:name="br.com.emanuel.desafiofirebase.register.view.RegisterFragment"
+        android:label="fragment_register"
+        tools:layout="@layout/fragment_register" />
 </navigation>
