--- a/DesafioFirebase/app/src/main/res/layout/fragment_login.xml
+++ b/DesafioFirebase/app/src/main/res/layout/fragment_login.xml
@@ -11,7 +11,7 @@
         android:id="@+id/card"
         android:layout_width="@dimen/dm_300dp"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_margin="@dimen/dm_8dp"
         app:cardBackgroundColor="@color/color_white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,17 +22,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingHorizontal="@dimen/dm_16dp"
-            android:paddingVertical="@dimen/dm_24dp"
+            android:paddingTop="@dimen/dm_8dp"
+            android:paddingBottom="@dimen/dm_16dp"
             android:orientation="vertical">
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textField"
+                android:id="@+id/edtLayoutEmailLogin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/email"
                 app:boxBackgroundColor="@color/color_white">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edtEmailLogin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textEmailAddress" />
@@ -40,15 +42,16 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textField2"
+                android:id="@+id/edtLayoutPasswordLogin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dm_16dp"
+                android:layout_marginTop="@dimen/dm_8dp"
                 android:hint="@string/password"
                 app:boxBackgroundColor="@color/color_white"
                 app:endIconMode="password_toggle">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edtPasswordLogin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword" />
@@ -56,6 +59,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <CheckBox
+                android:id="@+id/checkRememberLogin"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="@dimen/dm_8dp"
@@ -73,7 +77,7 @@
                 />
 
             <Button
-                android:id="@+id/btnCreateAccount"
+                android:id="@+id/btnNavigateToCreateAccount"
                 android:layout_width="wrap_content"
                 android:layout_height="35dp"
                 android:layout_marginTop="@dimen/dm_8dp"
