--- a/DesafioFirebase/app/src/main/res/values/colors.xml
+++ b/DesafioFirebase/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="colorPrimary">#009688</color>
     <color name="colorPrimaryDark">#00796B</color>
     <color name="colorAccent">#FF5252</color>
+    <color name="colorBackground">#DDDDDD</color>
     <color name="colorTextLink">#00A6FF</color>
+    <color name="colorWhite">#FFF</color>
     <color name="color_white">#FFF</color>
 </resources>
