--- a/DesafioFirebase/app/src/main/res/layout/fragment_games.xml
+++ b/DesafioFirebase/app/src/main/res/layout/fragment_games.xml
@@ -12,7 +12,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <!-- Main content -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerLevels"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/dm_16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:listitem="@layout/game_item" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
